*SVN*

* Added that "   " is now also blank? (using strip if available)

* Fixed Dependencies so all modules are able to load missing constants #1173 [Nicholas Seckar]

* Fixed the Inflector to underscore strings containing numbers, so Area51Controller becomes area51_controller #1176 [Nicholas Seckar]

* Fixed that HashWithIndifferentAccess stringified all keys including symbols, ints, objects, and arrays #1162 [Nicholas Seckar]

* Fixed Time#last_year to go back in time, not forward #1278 [fabien@odilat.com]

* Fixed the pluralization of analysis to analyses #1295 [seattle@rootimage.msu.edu]

* Fixed that Time.local(2005,12).months_since(1) would raise "ArgumentError: argument out of range" #1311 [jhahn@niveon.com]

* Added silencing to the default Logger class


*1.0.4* (19th April, 2005)

* Fixed that in some circumstances controllers outside of modules may have hidden ones inside modules. For example, admin/content might have been hidden by /content. #1075 [Nicholas Seckar]

* Fixed inflection of perspectives and similar words #1045 [thijs@vandervossen.net]

* Added Fixnum#even? and Fixnum#odd?

* Fixed problem with classes being required twice. Object#const_missing now uses require_dependency to load files. It used to use require_or_load which would cause models to be loaded twice, which was not good for validations and other class methods #971 [Nicholas Seckar]


*1.0.3* (27th March, 2005)

* Fixed Inflector.pluralize to handle capitalized words #932 [bitsweat]

* Added Object#suppress which allows you to make a saner choice around with exceptions to swallow #980. Example:

    suppress(ZeroDivisionError) { 1/0 }
  
  ...instead of:
  
    1/0 rescue nil # BAD, EVIL, DIRTY.


*1.0.2* (22th March, 2005)

* Added Kernel#returning -- a Ruby-ized realization of the K combinator, courtesy of Mikael Brockman.

    def foo
      returning values = [] do
        values << 'bar'
        values << 'baz'
      end
    end
    
    foo # => ['bar', 'baz']

